example/lib/src/generated/errors/errors_localization_he.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Hebrew (`he`).
class ErrorsLocalizationHe extends ErrorsLocalization {
  ErrorsLocalizationHe([String locale = 'he']) : super(locale);

  @override
  String get error => 'אירעה שגיאה';

  @override
  String get unexpectedError => 'אירעה שגיאה בלתי צפויה';

  @override
  String get bugReportSentText => 'דיווח באג נשלח בהצלחה.';
}
